Prevent sidebar from going over footer on iOS

--- a/client/src/css/_layout.scss
+++ b/client/src/css/_layout.scss
@@ -145,7 +145,7 @@ $settings-height: 100px;
 
 #main-footer {
   height:$bottom-content-height;
-  z-index: 400;
+  z-index: 501;
 }
 
 @media (min-height: 920px) {
